1998-08-24  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus-offline.el (gnus-offline-setup): Bug fix and version 
	changed to 1.53.

	* lisp/gnus-util.el (gnus-write-buffer): Write file in raw-text coding 
	system.

	* lisp/gnus-util.el (gnus-write-file-coding-system): New variable.

1998-08-23  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* lisp/message.el: Suppress some byte-compile warnings.
	(message-make-forward-subject): Failed to sync.
	(message-setup): Ditto.
	(message-clone-locals): Modify regexp.
	
	* lisp/message.el (message-fill-references): Reverted.

1998-08-23  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* lisp/gnus-agent.el (gnus-agent-braid-nov): Use
	`nnheader-insert-file-contents'.

	* lisp/gnus-i18n.el (gnus-set-summary-default-charset): Sync up
	with "akr" branch.

1998-08-23  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.15.

	* Sync up with Gnus 5.6.39.

1998-08-20  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.14.

	* Sync up with Gnus 5.6.38.

	* lisp/gnus-offline.el (gnus-offline-enable-fetch-mail): Enable to get 
	APOP server.

	* lisp/pop3-fma.el (pop3-fma-movemail): Enable to get from APOP server.
	(pop3-fma-set-pop3-password) Enable to get from APOP server.

1998-08-16  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.13.

	* Sync up with Gnus 5.6.37.

	*lisp/gnus-offline.el (gnus-offline-setup) : To create spol directory
	if not exists.
	Change default value of gnus-offline-drafts-queue-type 'miee to 'agent
	
1998-08-16  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.12.

	* Sync up with Gnus 5.6.36.
	
	* lisp/gnus-offline.el : New file.
	Merge gnus-offline to ichikawa branch.
	
1998-08-15  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* texi/gnus-ja.texi: Update.

1998-08-14  Katsumi Yamaoka   <yamaoka@jpl.org>
