@@ -1,3 +1,13 @@
+1998-08-25  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/gnus-cache.el (gnus-cache-possibly-enter-article):
+	                     (gnus-cache-save-buffers): Write file in raw-text 
+	coding system.
+	* lisp/gnus-cache.el (gnus-cache-write-file-coding-system): New variable.
+	* lisp/gnus-util.el (gnus-write-buffer): Undo change.
+
+	* lisp/gnus-util.el (gnus-write-file-coding-system): Delete variable.
+
 1998-08-24  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
 
 	* lisp/gnus-offline.el (gnus-offline-setup): Bug fix and version 
